# yast-squidguard

./: .cvsignore  MAINTAINER  README.md  RPMNAME  squidguard_conf.pm  yast2-squidguard.spec.in
agents/: Makefile  Makefile.am  Makefile.in  ag_squidguard  squidguard.scr
doc/: Makefile.am
doc/autodocs/: Makefile  Makefile.am  Makefile.in
package/: yast2-squidguard.changes
src/: Makefile.am  Squidguard.ycp  Squidguard2.pm  complex.ycp  dialogs.ycp  helps.ycp  squidguard.desktop  squidguard.ycp  squidguard_auto.ycp  squidguard_proposal.ycp  wizards.ycp
testsuite/: Makefile  Makefile.in
testsuite/tests/: Squidguard.out  Squidguard.ycp
